POST request on a blob resource should return a "network error" instead of HTTP 500 response https://bugs.webkit.org/show_bug.cgi?id=158022

Patch by Nael Ouedraogo <nael.ouedraogo@crf.canon.fr> on 2016-06-01
Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Make sure request on blob resource is correct.

* web-platform-tests/fetch/api/basic/scheme-blob-expected.txt:
* web-platform-tests/fetch/api/basic/scheme-blob-worker-expected.txt:
* web-platform-tests/fetch/api/basic/scheme-blob.js: Add new tests with several HTTP methods.

Source/WebCore:

Not allowed HTTP method is notified as failed in BlobResourceHandle as per Fetch
specification (5.2 Basic fetch). This behavior is observable in fetch WPT tests.

The behavior of XHR is slightly changed for asynchronous request on a blob resource with not
allowed or invalid HTTP methods. The onError callback is called instead of throwing an
exception as per XHR specification (https://xhr.spec.whatwg.org/#request-error-steps).

WPT tests expected results have been updated for fetch tests on blob resources which are
now correct.

Test: fast/files/xhr-blob-request.html ensures XHR response to requests on a blob resource is
correct.

* platform/network/BlobResourceHandle.cpp:
(WebCore::BlobResourceHandle::doStart):
* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::createRequest):

LayoutTests:

Make sure response to XHR request on blob is correct.

* fast/files/xhr-blob-request-expected.txt: Added.
* fast/files/xhr-blob-request.html: Added.

Canonical link: https://commits.webkit.org/176353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201557 268f45cc-cd09-0410-ab3c-d52691b4dbfc